# tap-powerbi-metadata

./: README.md  pyproject.toml
.secrets/: config.json.template
tap_powerbi_metadata/: streams.py  tap.py
tap_powerbi_metadata/tests/: test_standard_tests.py
